--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -263,6 +263,7 @@ jobs:
         workers = 3
         # Increase timeout to accommodate slower CPU inference
         timeout = 300
+        graceful_timeout = 300
         keepalive = 5
         max_requests = 1000
         max_requests_jitter = 100
@@ -335,10 +336,10 @@ jobs:
               '    server_name _;' \
               '' \
               '    # Increase timeouts for upstream to avoid 502 on slow responses' \
-              '    proxy_connect_timeout 60s;' \
-              '    proxy_send_timeout 300s;' \
-              '    proxy_read_timeout 300s;' \
-              '    send_timeout 300s;' \
+              '    proxy_connect_timeout 15s;' \
+              '    proxy_send_timeout 310s;' \
+              '    proxy_read_timeout 310s;' \
+              '    send_timeout 310s;' \
               '    client_max_body_size 10m;' \
               '' \
               '    location / {' \
@@ -349,6 +350,9 @@ jobs:
               '        proxy_set_header X-Forwarded-Proto $scheme;' \
               '        proxy_http_version 1.1;' \
               '        proxy_set_header Connection "";' \
+              '        proxy_buffering off;' \
+              '        proxy_request_buffering off;' \
+              '        proxy_ignore_client_abort off;' \
               '    }' \
               '}' | sudo tee /etc/nginx/sites-available/holowellness > /dev/null
             
