--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -221,6 +221,14 @@ jobs:
         [ -z "$RAG_S3_PREFIX_VAL" ] && RAG_S3_PREFIX_VAL="${{ secrets.RAG_S3_PREFIX }}"
         [ -z "$RAG_S3_PREFIX_VAL" ] && RAG_S3_PREFIX_VAL="rag_pdfs/"
 
+        # S3 cache bucket/prefix (optional, falls back to RAG bucket)
+        S3_CACHE_BUCKET_VAL="${{ vars.S3_CACHE_BUCKET }}"
+        [ -z "$S3_CACHE_BUCKET_VAL" ] && S3_CACHE_BUCKET_VAL="$RAG_S3_BUCKET_VAL"
+        S3_CACHE_PREFIX_VAL="${{ vars.S3_CACHE_PREFIX }}"
+        [ -z "$S3_CACHE_PREFIX_VAL" ] && S3_CACHE_PREFIX_VAL="cache/current/"
+        S3_CACHE_DELETE_LOCAL_VAL="${{ vars.S3_CACHE_DELETE_LOCAL }}"
+        [ -z "$S3_CACHE_DELETE_LOCAL_VAL" ] && S3_CACHE_DELETE_LOCAL_VAL="true"
+
         # RAG ingestion limits
         RAG_MAX_CHUNKS_VAL="${{ vars.RAG_MAX_CHUNKS }}"
         [ -z "$RAG_MAX_CHUNKS_VAL" ] && RAG_MAX_CHUNKS_VAL="${{ secrets.RAG_MAX_CHUNKS }}"
@@ -248,6 +256,9 @@ jobs:
         RAG_MAX_CHUNKS="$RAG_MAX_CHUNKS_VAL"
         APP_PUBLIC_URL="http://${PUBIP}"
         APP_TITLE="HoloWellness Chatbot"
+        S3_CACHE_BUCKET="$S3_CACHE_BUCKET_VAL"
+        S3_CACHE_PREFIX="$S3_CACHE_PREFIX_VAL"
+        S3_CACHE_DELETE_LOCAL="$S3_CACHE_DELETE_LOCAL_VAL"
 
         MONGO_URI="${{ secrets.MONGO_URI }}"
         AWS_REGION="${{ secrets.AWS_REGION }}"
